# post-quantum-state-leakage-secure-ake

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md
3rd/benchmark/include/benchmark/: benchmark.h
3rd/benchmark/src/: console_reporter.cc
3rd/benchmark/tools/gbench/: report.py
3rd/liboqs/: appveyor.yml
3rd/liboqs/src/: oqsconfig.h.cmake
etc/: make_algs_table.py  results.ods  results.xls
src/: bench.cc  pqscake.c  pqscake.h  pqscake.sublime-project  pqscake.sublime-workspace  test.c  utils.c  utils.h
